<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_text">PCAPdroid is an open source network capture and monitoring tool which works without root privileges</string>
    <string name="access_paid_features_msg">Check out <a href="%1$s">the user guide</a> to learn how to access the paid features</string>
    <string name="action_block">Block</string>
    <string name="action_unblock">Unblock</string>
    <string name="activate_via_qr_code">Activate via QR code</string>
    <string name="active_connections">Active connections</string>
    <string name="active_vpn_detected">Active VPN detected</string>
    <string name="add_action">Add</string>
    <string name="add_to_fw_whitelist">Add to firewall whitelist</string>
    <string name="all_interfaces">All interfaces</string>
    <string name="allow">Allow</string>
    <string name="allowed_connection_filter">Allowed</string>
    <string name="android_app_info">The Android system</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app">App</string>
    <string name="app_and_proto">%1$s (%2$s)</string>
    <string name="app_blocked">App blocked</string>
    <string name="app_blocked_info">The %1$s app has been blocked by the firewall</string>
    <string name="app_details">App details</string>
    <string name="app_filter">Target app</string>
    <string name="app_info">App info</string>
    <string name="app_intro_back_button">Back</string>
    <string name="app_intro_done_button">Done</string>
    <string name="app_intro_firewall_msg">With the integrated <a href="%1$s">Firewall</a>" you can easily block Internet access to individual apps and domains

Combine this with the built-in traffic visibility to get the ultimate tool to protect your privacy"</string>
    <string name="app_intro_geolocation_msg">"PCAPdroid can query a local database to determine the country of a remote server

You must first download the geolocation database from the app settings"</string>
    <string name="app_intro_image_content_description">graphics</string>
    <string name="app_intro_malware_detection">Enhance the security of your device with the <a href="%1$s">malware detection</a>" feature

By using up-to-date blacklists, it can detect, block and alert malicious connections in real-time"</string>
    <string name="app_intro_next_button">Next</string>
    <string name="app_intro_privacy_msg">"The app does not employ any tracking, analytics or phoning-home anti-features

How can you be sure? Check out its "<a href="%1$s">privacy policy</a> and its <a href="%2$s">source code</a></string>
    <string name="app_intro_skip_button">Skip</string>
    <string name="app_intro_traffic_dump">PCAPdroid provides <a href="%1$s">multiple ways</a>" to dump the traffic in the standard PCAP format for further analysis

Via the "<a href="%2$s">trailer option</a>, you can add app names to the packets and display them in Wireshark</string>
    <string name="app_intro_traffic_inspection">"Inspecting HTTP requests, responses and raw data is easy, thanks to the built-in decoders

Got an encrypted connection? You can enable the "<a href="%1$s">TLS decryption</a> to get the decrypted data</string>
    <string name="app_intro_welcome_msg">"PCAPdroid is a privacy-friendly app which lets you track and analyze the connections made by the apps in your device

Moreover, it allows you to export a PCAP dump of the traffic, extract metadata and much more!"</string>
    <string name="app_language">App language</string>
    <string name="app_license">PCAPdroid is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the <a href="https://www.gnu.org/licenses/gpl-3.0-standalone.html">GNU General Public License or later</a> for more details</string>
    <string name="app_log">Log</string>
    <string name="app_name">Name</string>
    <string name="app_not_found">Could not find the %1$s app</string>
    <string name="app_theme">Theme</string>
    <string name="app_unblocked">The %1$s app has been unblocked</string>
    <string name="app_val">App: %1$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps">Apps</string>
    <string name="asn">ASN</string>
    <string name="billing_connecting">The connection to Google Play is in progress, please retry in a while</string>
    <string name="billing_failure">Could not connect to Google Play. Please retry in a while</string>
    <string name="blacklist_type">Type: %1$s</string>
    <string name="blacklist_type_domain">Domain blacklist</string>
    <string name="blacklist_type_ip">IP blacklist</string>
    <string name="blacklists">Blacklists</string>
    <string name="block">Block…</string>
    <string name="block_new_apps">Block newly installed apps</string>
    <string name="block_private_dns">Block private DNS</string>
    <string name="block_private_dns_summary">Detect and possibly block private DNS to inspect DNS traffic. Disabling this can hinder traffic analysis</string>
    <string name="block_quick">Block QUIC</string>
    <string name="block_quick_summary">Block QUIC connections to possibly fall back to decryptable TLS. Some apps may stop working</string>
    <string name="blocked_connection_filter">Blocked</string>
    <string name="blocked_pkts">Blocked</string>
    <string name="blocklist">Blocklist</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_info">Build info</string>
    <string name="built_on">Built on: %1$s</string>
    <string name="buy_action">Buy</string>
    <string name="bytes_rcvd">Bytes received</string>
    <string name="bytes_sent">Bytes sent</string>
    <string name="ca_cert_export_failed">"An error occurred while exporting the CA certificate

If your device implements Autostart or similar software to limit background services execution, be sure to "<a href="%1$s">whitelist PCAPdroid</a></string>
    <string name="can_use_purchased_feature">You can now use the purchased feature</string>
    <string name="cancel_action">Cancel</string>
    <string name="cannot_write_file">Cannot write file</string>
    <string name="capture_all_apps">Capture the traffic of all the apps</string>
    <string name="capture_interface">Capture interface</string>
    <string name="capture_interface_open_error">Could not open the capture interface</string>
    <string name="capture_not_running_status">The capture is not running</string>
    <string name="capture_prefs">Capture</string>
    <string name="capture_running">Capture running</string>
    <string name="capture_stopped_low_memory">Capture has been stopped</string>
    <string name="capturing_from">Capturing packets from \"%1$s\"</string>
    <string name="cert_exported_now_installed">Certificate exported, now install it from the Android settings</string>
    <string name="cert_installed_correctly">The CA certificate is installed</string>
    <string name="conn_status_active">Active</string>
    <string name="conn_status_closed">Closed</string>
    <string name="conn_status_unreachable">Unreachable</string>
    <string name="decrypted">Decrypted</string>
    <string name="decryption">Decryption</string>
    <string name="edit_list">Edit list</string>
    <string name="error">Error</string>
    <string name="firewall">Firewall</string>
    <string name="live_capture">Live capture</string>
    <string name="network_interface">Interface</string>
    <string name="not_decryptable">Not decryptable</string>
    <string name="not_hidden_filter">Not hidden</string>
    <string name="open_pcap_file">Open PCAP file…</string>
    <string name="opensource_licenses"><b>Open Source Licenses:</b><br></br>"

 - zdtun: "<a href="https://github.com/emanuele-f/zdtun/blob/master/COPYING">LGPL-3.0</a>"

 - nDPI: "<a href="https://github.com/ntop/nDPI/blob/dev/COPYING">LGPL-3.0</a>"

 - CustomActivityOnCrash: "<a href="https://github.com/Ereza/CustomActivityOnCrash/blob/master/LICENSE">Apache-2.0</a>"

 - Gson: "<a href="https://github.com/google/gson/blob/master/LICENSE">Apache-2.0</a>"

 - Brotli decoder: "<a href="https://github.com/google/brotli/blob/master/LICENSE">MIT</a>"

 - mitmproxy: "<a href="https://github.com/mitmproxy/mitmproxy/blob/main/LICENSE">MIT</a>"

 - Chaquopy: "<a href="https://github.com/chaquo/chaquopy/blob/master/LICENSE.txt">MIT</a>"

 - MaxMind DB Reader: "<a href="https://github.com/maxmind/MaxMind-DB-Reader-java/blob/main/LICENSE">Apache-2.0</a>"

 - FlagKit: "<a href="https://github.com/madebybowtie/FlagKit/blob/master/LICENSE">MIT</a>"

 - IP Geolocation by "<a href="https://db-ip.com">DB-IP</a>"

 - AppIntro: "<a href="https://github.com/AppIntro/AppIntro/blob/main/LICENSE">Apache-2.0</a>"

 - Font Awesome: "<a href="https://fontawesome.com/license/free">Licenses</a>"

 - App icon by "<a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>"

 - SourceCodePro font: "<a href="https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md">OFL-1.1</a>"

 "</string>
    <string name="show_only_cleartext">Cleartext connections</string>
    <string name="show_only_malicious">Malicious connections</string>
    <string name="source_code">Source code</string>
    <string name="start_button">Start</string>
    <string name="status">Status</string>
    <string name="stop_button">Stop</string>
    <string name="title_activity_settings">Settings</string>
</resources>