<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_play_arrow" android:id="@id/action_start" android:orderInCategory="10" android:title="@string/start_button" app:showAsAction="always">
        <menu>
            <item android:id="@id/start_live_capture" android:title="@string/live_capture" />
            <item android:id="@id/open_pcap" android:title="@string/open_pcap_file" />
        </menu>
    </item>
    <item android:icon="@drawable/ic_media_stop" android:id="@id/action_stop" android:visible="false" android:orderInCategory="20" android:title="@string/stop_button" app:showAsAction="always" />
    <item android:icon="@drawable/ic_settings" android:id="@id/action_settings" android:orderInCategory="30" android:title="@string/title_activity_settings" app:showAsAction="ifRoom" />
</menu>