<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/logo" android:layout_width="90.0dip" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:src="@mipmap/ic_launcher" android:adjustViewBounds="true" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/logo" android:layout_centerHorizontal="true" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/app_version" android:layout_alignParentStart="true">
            <TextView android:id="@id/app_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/about_text" />
            <TextView android:autoLink="email" android:id="@id/app_copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="Copyright (C) 2020-23 - Emanuele Faranda black.silver@hotmail.it" />
            <TextView android:id="@id/app_license" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/app_license" />
            <TextView android:id="@id/app_source_link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/source_code" />
            <TextView android:id="@id/opensource_licenses" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/opensource_licenses" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>